# aoc

./: .gitattributes  .gitignore  LICENSE  README  README.md  env.ps1
2018/: 01.c  01.h  CMakeLists.txt  common.h  input.h  main.c
2018/01/: main.c
2018/02/: 02.c  02input.h
c/: CMakeLists.txt
c/01/: 01.c  (+2 more)
rust/: Cargo.toml
rust/d01/src/: main.rs
rust/d02/: Cargo.toml
rust/d02/src/: main.rs
rust/d04/src/: main.rs
rust/d05/src/: input_.txt  main.rs
rust/days/src/: day02.rs  day05.rs  main.rs
rust/input/2015/: day07.test  day12.test  day16.test  day25.test
rust/input/2016/: day03.test  day04.test
rust/src/: board.rs  day04.rs  dayXX.rs  file_system.rs  main.rs
rust/src/utils/: board.rs  board3d.rs  cpu.rs  crt.rs  file_system.rs  grid3d.rs  linked_list.rs  mod.rs  molecule.rs  primes.rs  rock_paper_scissors.rs  screen.rs  tetris.rs  utils.rs
rust/src/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
rust/src/year2016/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  mod.rs
rust/src/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
rust/src/year2024/: day01.rs
(+93 files in other folders)
