[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.7.0"
log = "0.4.17"
env_logger = "0.10.0"
grid = "0.9.0"
strum = "0.24.1"
strum_macros = "0.24"
rusttype = "0.9.3"
